feat(docker): docker deployment + CNB config (single commit)
- Add docker/Dockerfile with entrypoint, OCI labels, healthcheck; INSTALL_EDITABLE default=false
- Add docker/entrypoint.sh with graceful stop, diagnostics, optional UI, log tailing
- Add docker/docker-compose.yml with ports, healthcheck, init, stop_grace_period=10s, volume mapping
- Add .dockerignore (trim context)
- Add .cnb.yml for multi-arch build using docker/Dockerfile

--- a/.gitignore
+++ b/.gitignore
@@ -59,10 +59,12 @@ venv.bak/
 .idea/
 .vscode/
 .claude/
+CLAUDE.md
+AGENTS.md
 *.swp
 *.swo
 *~
-
+.serena/
 # OS generated files
 .DS_Store
 .DS_Store?
